ちょっと修正

--- a/_posts/2020-01-28-diary.md
+++ b/_posts/2020-01-28-diary.md
@@ -7,4 +7,4 @@ layout: post
 
 Theme とかを色々書きました．  
 Theme は <a href="http://jekyllthemes.org/themes/minimal-text/">Minimal Text</a> を基に，Tags ページとか Font とかその他細かなところが変化しています．  
-よろしく．:)
+よろしく :)
