Write 2020-01-29-diary.md

--- a/_posts/2020-01-29-diary.md
+++ b/_posts/2020-01-29-diary.md
@@ -5,6 +5,7 @@ tags:
 layout: post
 ---
 
+## ことりん
 Codeforces で Kotlin Heroes の Episode 3 が今月の 27 日にあるらしいので Kotlin の勉強を始めました．  
 <!-- more -->
 Kotlin の環境を作るのがちょっと面倒っぽかったので AtCoder のコードテスト + Geany でやっています．  
@@ -14,3 +15,9 @@ C++ よりうまく書ける部分があっていい感じ．
 ICPC でも使えるようになったらしいし競プロのサブ言語として使ってみようかな．  
 
 <img src="{{ site.baseurl}}/resources/2020-01-29-diary.png">
+
+## Educational Codeforces Round 81 (Rated for Div. 2)
+Hack されなければ ABCDE の 5 完．  
+A で致命的な誤読をして 3 WA して非常に遅れてしまったけどどうにかカバー出来たので一安心． 
+
+<img src="{{ site.baseurl}}/resources/2020-01-29-diary-edufo.png">
