ちょっと日記修正

--- a/_posts/2020-02-01-diary.md
+++ b/_posts/2020-02-01-diary.md
@@ -5,13 +5,17 @@ tags:
 layout: post
 ---
 
-# きり誕コン
+## きり誕コン
 きりたんお誕生日おめでとうコンテストの問題を一問完成させたよ．
 現状全部で五問か六問構成になりそうだよ．  
 
 <!-- more -->
 
-# ポエム
+## css
+ちょっと文字の大きさとか調整したいな，とか思いつつ作業に移れていない......<br>
+多分そのうちいい感じになります，たぶんね．
+
+## ポエム
 自分のやりたいことが見つからないと常々感じているのだけど．
 例えば最近よくやってる競技プログラミングだって，ぼくは本質的にレートを上げることを求めているわけじゃないし，かといって競技プログラミング界隈に影響力を持ちたいだとかそんなことを思っているわけでもない（特に後者は絶対にやりたくない）．<br>
 ただ，最近わかってきたことがあって．
