きり誕告知動画を記載

--- a/_posts/2020-02-11-diary.md
+++ b/_posts/2020-02-11-diary.md
@@ -9,4 +9,7 @@ layout: post
 二問完成させた......あと一問テストケース作れば一旦完成です......<br>
 
 ## 告知動画
-いまから作ります，RTA 開始！！！！（現在 2/11 23:00）
+いまから作ります，RTA 開始！！！！（現在 2/11 23:00）<br>
+
+完成！！！（27:00）<br>
+<a href="https://www.nicovideo.jp/watch/sm36353557">【きり誕 2020】きりたんお誕生日コンテスト 2020 告知動画【競技プログラミング】</a>
