--- a/_posts/2020-02-29-diary.md
+++ b/_posts/2020-02-29-diary.md
@@ -15,6 +15,14 @@ layout: post
 
 <img src="{{ site.baseurl }}/resources/2020-02-29-CF.png">
 
+## AtCoder
+出ていなかった<a href="https://atcoder.jp/contests/abc153">ABC153</a>のバーチャル参加をした．
+何気に初めてのバーチャル参加だった．<br>
+結果は 21:54(0) で全完，ただ初めに PC が落ちて再起動していたので実際は 16:54 
+とかだと思う．
+
+<img src="{{ site.baseurl }}/resources/2020-02-29-AC.png">
+
 ## CSA
 昨日参加したコンテストのレート変化がまだ来ていないけどもしかして Unrated になりましたか？
 
