--- a/_posts/2020-04-15-diary.md
+++ b/_posts/2020-04-15-diary.md
@@ -14,7 +14,14 @@ layout: post
 ストーリーは第一部九章まで進みユーザーランクは 71 になった．それなりに継続してゆきたい．
 
 ## AtCoder
+### ABC161
 <a href="https://atcoder.jp/contests/abc161">ABC161</a> をやった．<br>
 適当参加なのでバーチャル参加ではない．E 問題に異常に悩まされたが丁寧に場合分けすることで即答出来る問題だった．雑に考察する癖をなくしたい．
 
 <img width = "600" src="{{ site.baseurl }}/resources/2020-04-15-AC.png">
+
+### ABC162
+<a href="https://atcoder.jp/contests/abc162">ABC162</a> をやった．<br>
+F で混乱せずに AC 出来たのは良かったが，遅い（Youtube 見ながらやるのをやめよう）．
+
+<img width = "600" src="{{ site.baseurl }}/resources/2020-04-15-AC-2.png">
